--- a/.htaccess
+++ b/.htaccess
@@ -7,6 +7,9 @@ RewriteRule ^product$ /app/views/public/product.php [L]
 RewriteRule ^contact$ /app/views/public/contact.php [L]
 
 #USER ROUTERS FRONTEND
+RewriteRule ^cart$ /app/views/client/cart.php [L]
+RewriteRule ^checkout/preview$ /app/views/client/payment_info.php [L]
+RewriteRule ^checkout/payment$ /app/views/client/payment.php [L]
 
 #ADMIN ROUTERS FRONTEND
 RewriteRule ^admin/home$ /app/views/admin/home.php [L]
