--- a/.htaccess
+++ b/.htaccess
@@ -14,6 +14,7 @@ RewriteRule ^admin/home$ /app/views/admin/home.php [L]
 
 
 #CLIENT ROUTERS BACKEND
+RewriteRule ^test$ /app/models/test.php [L]
 
 #USER ROUTERS BACKEND
 
