--- a/.htaccess
+++ b/.htaccess
@@ -15,6 +15,7 @@ RewriteRule ^admin/home$ /app/views/admin/home.php [L]
 
 #CLIENT ROUTERS BACKEND
 RewriteRule ^test$ /app/models/test.php [L]
+RewriteRule ^system/inforList$ /app/controllers/system/inforList.php [L]
 
 #USER ROUTERS BACKEND
 
