--- a/.htaccess
+++ b/.htaccess
@@ -15,6 +15,8 @@ RewriteRule ^cart$ /app/views/client/cart.php [L]
 RewriteRule ^checkout/preview$ /app/views/client/payment_info.php [L]
 RewriteRule ^checkout/payment$ /app/views/client/payment.php [L]
 RewriteRule ^notice$ /app/views/client/notice.php [L]
+RewriteRule ^order/success$ /app/views/client/success_order.php [L]
+RewriteRule ^order/failure$ /app/views/client/failure_order.php [L]
 
 #ADMIN ROUTERS FRONTEND
 RewriteRule ^admin/home$ /app/views/admin/home.php [L]
@@ -57,6 +59,10 @@ RewriteRule ^api/order/sale$ /app/controllers/order/sale.php [L]
 
 #PRODUCT ROUTERS BACKEND
 RewriteRule ^api/product/info$ /app/controllers/product/info.php [L]
+
+#PAYOS
+RewriteRule ^api/payment/create$ /app/controllers/payment/create.php [L]
+RewriteRule ^api/payment/check$ /app/controllers/payment/check.php [L]
 
 #CUSTOM 404 ERROR PAGE
 ErrorDocument 404 /app/views/public/404.php
