--- a/.htaccess
+++ b/.htaccess
@@ -45,15 +45,22 @@ RewriteRule ^api/system/inforList$ /app/controllers/system/inforList.php [L]
 RewriteRule ^api/product/productType$ /app/controllers/product/productType.php [L]
 
 #USER ROUTERS BACKEND
+RewriteCond %{REQUEST_METHOD} GET
 RewriteRule ^api/user/info$ /app/controllers/user/info.php [L]
+RewriteCond %{REQUEST_METHOD} POST
+RewriteRule ^api/user/info$ /app/controllers/user/updateInfo.php [L]
 RewriteRule ^api/user$ /app/controllers/user/home.php [L]
 RewriteRule ^api/user/avatar$ /app/controllers/user/avatar.php [L]
+RewriteRule ^api/user/review$ /app/controllers/user/review.php [L]
+RewriteRule ^api/user/comment$ /app/controllers/user/comment.php [L]
 
 #CART ROUTERS BACKEND
 RewriteCond %{REQUEST_METHOD} GET
 RewriteRule ^api/user/cart$ /app/controllers/cart/get.php [L]
 RewriteCond %{REQUEST_METHOD} POST
 RewriteRule ^api/user/cart$ /app/controllers/cart/set.php [L]
+RewriteRule ^api/cart/delete$ /app/controllers/cart/delete.php [L]
+RewriteRule ^api/cart/update$ /app/controllers/cart/update.php [L]
 
 #ORDER ROUTERS BACKEND
 RewriteRule ^api/order/sale$ /app/controllers/order/sale.php [L]
@@ -64,9 +71,17 @@ RewriteRule ^api/order/info$ /app/controllers/order/info.php [L]
 RewriteRule ^api/system/contact$ /app/controllers/system/contactInfo.php [L]
 
 #ADMIN ROUTERS BACKEND
+RewriteRule ^api/admin/user$ /app/controllers/admin/userInfo.php [L]
+RewriteRule ^api/admin/ban$ /app/controllers/admin/banUser.php [L]
+RewriteCond %{REQUEST_METHOD} GET
+RewriteRule ^api/admin/product$ /app/controllers/admin/product.php [L]
+RewriteCond %{REQUEST_METHOD} POST
+RewriteRule ^api/admin/product$ /app/controllers/admin/addProduct.php [L]
 
 #PRODUCT ROUTERS BACKEND
 RewriteRule ^api/product/info$ /app/controllers/product/info.php [L]
+RewriteRule ^api/product/propose$ /app/controllers/product/propose.php [L]
+RewriteRule ^api/product/like$ /app/controllers/product/like.php [L]
 
 #PAYOS
 RewriteRule ^api/payment/create$ /app/controllers/payment/create.php [L]
