add category page, fix bug

--- a/.htaccess
+++ b/.htaccess
@@ -5,6 +5,7 @@ Options -Indexes
 RewriteRule ^$ /app/views/public/home.php [L]
 RewriteRule ^product$ /app/views/public/product.php [L]
 RewriteRule ^contact$ /app/views/public/contact.php [L]
+RewriteRule ^category$ /app/views/public/category.php [L]
 
 #USER ROUTERS FRONTEND
 RewriteRule ^cart$ /app/views/client/cart.php [L]
