--- a/.htaccess
+++ b/.htaccess
@@ -104,6 +104,10 @@ RewriteCond %{REQUEST_METHOD} GET
 RewriteRule ^api/admin/product$ /app/controllers/admin/product.php [L]
 RewriteCond %{REQUEST_METHOD} POST
 RewriteRule ^api/admin/product$ /app/controllers/admin/addProduct.php [L]
+RewriteRule ^api/admin/updateProduct$ /app/controllers/admin/updateProduct.php [L]
+RewriteRule ^api/admin/updateUser$ /app/controllers/admin/updateUser.php [L]
+RewriteRule ^api/admin/deleteProduct$ /app/controllers/admin/deleteProduct.php [L]
+
 
 #PRODUCT ROUTERS BACKEND
 RewriteRule ^api/product/info$ /app/controllers/product/info.php [L]
